fix: fixed alignment with multiple columns

--- a/src/components/division/section/Section.module.css
+++ b/src/components/division/section/Section.module.css
@@ -6,9 +6,9 @@
     padding-block: 5rem;
 
     display: flex;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
+
     gap: 2rem;
 
     z-index: 0;
@@ -17,8 +17,9 @@
 .container > div {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+
+    flex: 1;
 }
 
 .container.hero {
